--- a/style.css
+++ b/style.css
@@ -4,8 +4,12 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: Arial, sans-serif;
+}
+
 header {
-    background-color: lightblue;
+    background-color: rgb(37, 94, 233);
     padding: 10px 0px;
 }
 
@@ -22,14 +26,15 @@ footer {
    padding-top: 15px;
 }
 
-/* CLASSI DI LAYOU */
+/* CLASSI DI LAYOUT */
+/* CLASSI DI UTILITY */
 .container {
     max-width: 1200px;
     margin: 0 auto;
 }
 
 .container-sm {
-    max-width: 990px;
+    max-width: 800px;
     margin: 0 auto;
 }
 
@@ -57,8 +62,6 @@ footer {
 
 .col-25 {
     width: 25%;
-    border: dashed;
-    background-color: orange;
 }
 
 .col-34 {
@@ -77,9 +80,6 @@ footer {
 
 .col-50 {
     width: 50%;
-    border-top: dashed;
-    border-bottom: dashed;
-    background-color: orange;
 }
 
 .col-60 {
@@ -91,9 +91,7 @@ footer {
 
 .col-100 {
     width: 100%;
-    border: dashed;
-    background-color: rgba(238,130,238,255);
-    height: 250px;
+    height: 300px;
 }
 
 .col-100-height-100 {
@@ -105,10 +103,6 @@ footer {
 
 .bg-lightblue {
     background-color: lightblue;
-}
-
-.bg-darkblue {
-    background-color: rgb(0, 0, 87);
 }
 
 .bg-lightgrey {
@@ -137,11 +131,13 @@ footer {
 
 .unstyled-list li {
     display: inline-block;
+    padding: 0px 15px;
 }
 
 .unstyled-list li a {
-    color: #000;
+    color: white;
     text-decoration: none;
+    font-weight: 800;
 }
 
 .py-10 {
@@ -153,7 +149,7 @@ footer {
 }
 
 .py-50 {
-    padding: 50px 0;
+    padding: 165px 0;
 }
 
 .height-500 {
@@ -172,6 +168,10 @@ footer {
     justify-content: space-between;
 }
 
+.justify-content-evenly{
+    justify-content: space-evenly;
+}
+
 .align-items-center {
     align-items: center;
 }
@@ -181,7 +181,54 @@ footer {
     background-color: rgba(255,192,203,255);
     padding: 5px;
 }
+/* FINE CLASSI DI UTILITY */
 
-/* .d-flex.align-items-center.justify-content-between {
-    height: 100%;
-} */
+.btn {
+    padding: 10px;
+    border-radius: 30px;
+    color: black;
+    text-decoration: none;
+    
+}
+
+.btn-black {
+    padding: 10px;
+    border-radius: 30px;
+    color: white;
+    text-decoration: none;
+}
+
+.btn-white{
+    background-color: white;
+}
+
+.btn-black{
+    background-color: black;
+}
+
+/* INIZIO BG-JUMBO */
+.bg-jumbo{
+    background-image: url(img/jumbo.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.titolo-block-1{
+    font-size: 55px;
+    color: white;
+}
+
+.h3-block-1{
+    color: white;
+    padding-top: 30px;
+}
+
+.h3-block-2{
+    color: white;
+    padding-top: 5px;
+}
+
+.h3-block-3{
+    color: white;
+    padding-top: 5px;
+}
