--- a/style.css
+++ b/style.css
@@ -103,10 +103,6 @@ footer {
     background-color: lightblue;
 }
 
-.bg-lightgrey {
-    background-color: lightgrey;
-}
-
 .bg-green {
     background-color: green;
 }
@@ -241,6 +237,20 @@ footer {
 .h3-block-black{
     color: rgba(35,39,42,255);
     padding-top: 20px;
+    padding-right: 100px
+}
+/* FINE BG ITEM1.SVG */
+
+/* INIZIO BG ITEM2.SVG */
+.col-40-2 {
+    width: 39%;
+    height: 500px;
 }
 
-/* FINE BG ITEM1.SVG */
+.col-60-2 {
+    width: 60%;
+    height: 500px;
+    background-image: url(img/item2.svg);
+    background-repeat: no-repeat;
+}
+/* FINE BG ITEM2.SVG */
