--- a/style.css
+++ b/style.css
@@ -98,15 +98,6 @@ footer {
 }
 
 /* FINE CLASSI DI LAYOUT */
-
-.bg-lightblue {
-    background-color: lightblue;
-}
-
-.bg-green {
-    background-color: green;
-}
-
 .text-left {
     text-align: left;
 }
@@ -146,8 +137,10 @@ footer {
     padding: 165px 0;
 }
 
-.height-500 {
-    height: 500px;
+.height-550 {
+    height: 550px;
+    background-image: url(img/item4-big.svg);
+    background-repeat: no-repeat;
 }
 
 .height-100 {
@@ -175,6 +168,10 @@ footer {
     background-color: rgba(255,192,203,255);
     padding: 5px;
 }
+.bg-center{
+    background-position: center;
+}
+
 /* FINE CLASSI DI UTILITY */
 
 .btn {
@@ -212,6 +209,11 @@ footer {
     color: white;
 }
 
+.h3-block{
+    padding-top: 20px;
+    padding-right: 100px
+}
+
 .h3-block-1{
     color: white;
     padding-top: 30px;
@@ -232,12 +234,6 @@ footer {
 .titolo-block-2 {
     font-size: 55px;
     color: black;
-}
-
-.h3-block-black{
-    color: rgba(35,39,42,255);
-    padding-top: 20px;
-    padding-right: 100px
 }
 /* FINE BG ITEM1.SVG */
 
@@ -268,3 +264,40 @@ footer {
     background-repeat: no-repeat;
 }
 /* FINE BG ITEM3.SVG */
+
+/* INIZIO BG ITEM4.SVG */
+
+.h3-block-4{
+    padding-top: 20px;
+    padding-right: 100px;
+    padding-left: 100px;
+}
+
+.star{
+    width: 100%;
+    height: 100px;
+    background-image: url(img/stars.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.text-center-2{
+    text-align: center;
+    padding-top: 60px;
+    font-size: 28px;
+    font-family: Arial, sans-serif;
+}
+
+.btn-lightblue{
+    background-color: rgba(142,161,225,255);
+}
+
+.download-mac{
+    padding-top: 25px;
+}
+
+.justify-content-center{
+    justify-content: center;
+}
+
+/* FINE BG ITEM4.SVG */
