--- a/style.css
+++ b/style.css
@@ -46,7 +46,6 @@ footer {
 .row-footer-top {
     display: flex;
     flex-wrap: wrap;
-    border: dashed;
 }
 
 .row-footer-bottom {
@@ -56,8 +55,6 @@ footer {
 
 .col-17 {
     width: calc(100% / 6);
-    border: 1px dashed white;
-    background-color: rgba(32,178,170,255);
 }
 
 .col-25 {
@@ -66,8 +63,6 @@ footer {
 
 .col-34 {
     width: calc(100% / 6 * 2);
-    border-right: dashed;
-    background-color: rgba(240,128,128,255);
     height: 350px;
 }
 
@@ -266,7 +261,6 @@ footer {
 /* FINE BG ITEM3.SVG */
 
 /* INIZIO BG ITEM4.SVG */
-
 .h3-block-4{
     padding-top: 20px;
     padding-right: 100px;
@@ -299,5 +293,50 @@ footer {
 .justify-content-center{
     justify-content: center;
 }
-
 /* FINE BG ITEM4.SVG */
+
+/* INIZIO TOP FOOTER */
+.text-footer{
+    width: 390px;
+    font-size: 40px;
+    color: rgba(115,138,219,255);
+}
+
+.img-ita{
+    width: 35px;
+    height: 21px;
+    margin-top: 20px;
+}
+
+.align-items-self-end{
+    align-items: self-end;
+}
+
+.p-top-footer{
+    color: white;
+}
+
+.social{
+    height: 50px;
+    padding-top: 20px;
+    margin-right: 200px;
+}
+
+.social-1{
+    width: 25px;
+    height: 25px;
+}
+
+.titolo-opz{
+    color: rgba(115,138,219,255);
+    font-size: 20px;
+}
+
+.opzione{
+    color: white;
+}
+
+.opz-py{
+    padding-top: 15px;
+}
+/* FINE TOP FOOTER */
