--- a/style.css
+++ b/style.css
@@ -89,7 +89,6 @@ footer {
 
 .col-100-height-100 {
     width: 100%;
-    background-color: rgba(127,255,212,255);
 }
 
 /* FINE CLASSI DI LAYOUT */
@@ -158,11 +157,6 @@ footer {
     align-items: center;
 }
 
-.bottom-footer-content {
-    border: dashed;
-    background-color: rgba(255,192,203,255);
-    padding: 5px;
-}
 .bg-center{
     background-position: center;
 }
@@ -340,3 +334,10 @@ footer {
     padding-top: 15px;
 }
 /* FINE TOP FOOTER */
+
+/* INIZIO BOTTOM FOOTER */
+.btn-blu-chiaro{
+    background-color: rgba(115,138,219,255);
+    color: white;
+}
+/* FINE BOTTOM FOOTER */
